# tap-azure-carbon-emission

./: .gitignore  README.md  meltano.yml  pyproject.toml
tap_azure_carbon_emission/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_azure_carbon_emission/schemas/: carbon_emission_report.json
