[project]
name = "tap-azure-carbon-emission"
version = "0.1.0"
description = "Singer tap for extracting data from Azure carbon emission API"
authors = [
    {name = "Jonathan Perron", email = "jonathan.perron@lumapps.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "singer-sdk>=0.52.2,<3.0.0",
    "requests>=2.25.1,<3.0.0"
]

[project.scripts]
tap-azure-carbon-emission = "tap_azure_carbon_emission.tap:TapAzureCarbonEmission.cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
